rgbds-0.6.1/test/asm/local-wrong-parent.err
error: local-wrong-parent.asm(5):
    Not currently in the scope of 'WrongParent'
error: Assembly aborted (1 error)!
