rgbds-0.6.1/test/asm/local-wrong-parent.asm
SECTION "sec", ROM0

Parent:
	db 0
WrongParent.child
	db 0
